# desplio

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Desplio_PRD_v1.0.md  LICENSE  README.md  SECURITY.md  fs.txt  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/daemon/: Cargo.toml
apps/daemon/scripts/: x11_virtual_wallpaper.py
apps/daemon/src/: config.rs  main.rs
apps/daemon/src/capture/: mod.rs
apps/daemon/src/discovery/: mod.rs
apps/daemon/src/display/: edid.rs  evdi.rs  mod.rs  wayland_wlr.rs  x11_dummy.rs
apps/daemon/src/encoder/: mod.rs
apps/daemon/src/input/: mod.rs
apps/daemon/src/server/: mod.rs
apps/daemon/src/webrtc/: mod.rs
apps/desktop-client/: package.json
apps/desktop-client/src-tauri/: Cargo.toml
apps/mobile-client/: capacitor.config.ts  package.json  setup_files.js
apps/mobile-client/android/: capacitor.settings.gradle
apps/mobile-client/android/app/: build.gradle
apps/mobile-client/android/app/src/main/: AndroidManifest.xml
apps/mobile-client/android/app/src/main/java/com/desplio/mobile/: DesplioForegroundService.java  DesplioService.java  MainActivity.java  VideoDecoderPlugin.java
apps/mobile-client/android/app/src/main/res/values/: strings.xml
apps/mobile-client/src/hooks/: useInputCapture.ts  useWakeLock.ts  useWebRTC.ts
apps/mobile-client/src/screens/: Display.tsx
apps/mobile-client/src/workers/: renderer.worker.ts
apps/tray/: package.json
apps/tray/src-tauri/: Cargo.toml
apps/web-client/: index.html  package.json
scripts/: dev.sh  install.sh
