[package]
name = "desplio-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
ctrlc = "3.4"
evdi-sys = "0.4.0"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webrtc = "0.8.0"
