[package]
name = "desplio-daemon"
version = "0.1.0"
edition = "2021"

[features]
default = ["wayland-pipewire"]
wayland-pipewire = ["dep:ashpd", "dep:zbus"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
ashpd = { version = "0.13.10", optional = true, features = ["screencast"] }
bytes = "1"
ctrlc = "3.4"
enumflags2 = "0.7"
evdi-sys = "0.4.0"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
webrtc = "0.8.0"
webrtc-media = "0.6.1"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
zbus = { version = "5.15.0", optional = true }
